gitops/base/hello/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: hello
  labels:
    app: hello
spec:
  type: ClusterIP
  selector:
    app: hello
  ports:
    - name: http # Istio はポート名のプロトコルプレフィックス (http-/grpc- 等) でプロトコルを判定する
      port: 80
      targetPort: 8080
